Fix bug center align Hero part

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,9 +66,10 @@ a {
 
 .hero-wrap {
     position: relative;
+    display: flex;
+    justify-content: center;
     background: #e6f0ff;
     height: calc(100vh - 90px) ;
-    display: flex;
     flex-direction: column;
 }
 
@@ -112,15 +113,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     max-width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -128,7 +125,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     font-weight: 700;
     font-size: 6.2rem;
     line-height: 1.19;
@@ -137,7 +134,7 @@ a {
     margin-top: 8px;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     font-weight: 400;
     font-size: 1.8rem;
     line-height: 1.78;
